src/styles/input.css
@import "tailwindcss";

@theme {
  --breakpoint-xs: 30rem;
}

@layer components {
  .product-card {
    @apply bg-white rounded-md overflow-hidden border border-yellow-50 hover:border-yellow-200 transition-all duration-500 transform hover:-translate-y-1;
  }

  .product-image {
    @apply w-full h-full object-cover transition-transform duration-700 ease-out group-hover:scale-105;
  }

  .product-image-container {
    @apply overflow-hidden sm:h-67 md:h-62.5 xl:h-67 lg:h-65 h-65.5 sm:w-61.75 md:w-[328px] lg:w-[209px] xl:w-[267px];
  }

  .product-info {
    @apply p-5 flex flex-col grow bg-gradient-to-b from-white to-[#fffcf7];
  }

  .product-title {
    @apply text-[15px] font-serif font-medium text-gray-800 tracking-wide mb-1 leading-tight line-clamp-2;
  }

  .product-price {
    @apply font-semibold text-lg text-yellow-800/90 tracking-wide font-sans;
  }

  .btn-primary {
    @apply bg-black text-white text-xs uppercase tracking-widest py-2.5 px-5 rounded-full hover:bg-yellow-700 hover:shadow-lg transition-all duration-300 font-medium;
  }

  .btn-primary-full {
    @apply bg-black text-white px-6 py-4 rounded-full uppercase tracking-widest text-sm hover:bg-yellow-700 hover:shadow-lg transition-all duration-300 font-medium w-full;
  }

  .btn-secondary {
    @apply bg-white text-gray-800 border border-gray-300 px-6 py-3 rounded-full uppercase tracking-widest hover:border-black hover:bg-gray-50 transition-colors duration-300 font-medium text-xs;
  }

  .section-title {
    @apply text-3xl md:text-4xl font-serif font-medium text-gray-900 tracking-wide text-center mb-4;
  }

  .section-subtitle {
    @apply text-gray-500 text-lg font-light text-center max-w-2xl mx-auto mb-16;
  }

  .input-field {
    @apply w-full px-4 py-3 border border-gray-200 rounded-sm focus:outline-none focus:ring-1 focus:ring-gray-200;
  }

  .form-label {
    @apply block text-gray-700 font-semibold mb-2;
  }
}

